[CI] Auto-commit changed files from 'node scripts/lint_ts_projects --fix'

--- a/x-pack/plugins/search_indices/tsconfig.json
+++ b/x-pack/plugins/search_indices/tsconfig.json
@@ -35,7 +35,8 @@
     "@kbn/search-index-documents",
     "@kbn/es-types",
     "@kbn/search-api-keys-api",
-    "@kbn/search-api-keys-components"
+    "@kbn/search-api-keys-components",
+    "@kbn/search-shared-ui"
   ],
   "exclude": [
     "target/**/*",
