--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -918,9 +918,9 @@ packages/kbn-test-eui-helpers @elastic/kibana-visualizations
 x-pack/test/licensing_plugin/plugins/test_feature_usage @elastic/kibana-security
 packages/kbn-test-jest-helpers @elastic/kibana-operations @elastic/appex-qa
 packages/kbn-test-subj-selector @elastic/kibana-operations @elastic/appex-qa
-x-pack/test_serverless 
-test 
-x-pack/test 
+x-pack/test_serverless
+test
+x-pack/test
 x-pack/performance @elastic/appex-qa
 x-pack/examples/testing_embedded_lens @elastic/kibana-visualizations
 x-pack/examples/third_party_lens_navigation_prompt @elastic/kibana-visualizations
@@ -1165,6 +1165,9 @@ x-pack/test/observability_ai_assistant_functional @elastic/obs-ai-assistant
 /x-pack/test/functional/apps/infra @elastic/obs-ux-infra_services-team
 /x-pack/test/functional/apps/infra/logs @elastic/obs-ux-logs-team
 
+# Observability
+/x-pack/test/functional/es_archives/cases/default @elastic/observability
+
 # Observability UX management team
 /x-pack/packages/observability/alert_details @elastic/obs-ux-management-team
 /x-pack/test/observability_functional @elastic/obs-ux-management-team
@@ -1336,6 +1339,12 @@ x-pack/test/**/deployment_agnostic/ @elastic/appex-qa #temporarily to monitor te
 /x-pack/test_serverless/**/test_suites/common/saved_objects_management/ @elastic/kibana-core
 /x-pack/test_serverless/api_integration/test_suites/common/core/ @elastic/kibana-core
 /x-pack/test_serverless/api_integration/test_suites/**/telemetry/ @elastic/kibana-core
+/x-pack/test/functional/es_archives/cases/migrations/8.8.0 @elastic/kibana-core
+/x-pack/test/functional/es_archives/cases/migrations/7.11.1 @elastic/kibana-core
+/x-pack/test/functional/es_archives/cases/migrations/7.13_user_actions @elastic/kibana-core
+/x-pack/test/functional/es_archives/cases/migrations/7.13.2 @elastic/kibana-core
+/x-pack/test/functional/es_archives/cases/migrations/7.16.0_space @elastic/kibana-core
+
 #CC# /src/core/server/csp/ @elastic/kibana-core
 #CC# /src/plugins/saved_objects/ @elastic/kibana-core
 #CC# /x-pack/plugins/cloud/ @elastic/kibana-core
@@ -1428,8 +1437,10 @@ x-pack/plugins/cloud_integrations/cloud_full_story/server/config.ts @elastic/kib
 /x-pack/test/functional/es_archives/alerts_legacy @elastic/response-ops
 /x-pack/test/functional/es_archives/observability/alerts @elastic/response-ops
 /x-pack/test/functional/es_archives/actions @elastic/response-ops
-/x-pack/test/functional/es_archives/rules_scheduled_task_id  @elastic/response-ops
-/x-pack/test/functional/es_archives/alerting/8_2_0  @elastic/response-ops
+/x-pack/test/functional/es_archives/rules_scheduled_task_id @elastic/response-ops
+/x-pack/test/functional/es_archives/alerting/8_2_0 @elastic/response-ops
+/x-pack/test/functional/es_archives/cases/signals/default @elastic/response-ops
+/x-pack/test/functional/es_archives/cases/signals/hosts_users @elastic/response-ops
 
 # Enterprise Search
 /x-pack/test/functional_enterprise_search/ @elastic/search-kibana
@@ -1462,6 +1473,7 @@ x-pack/test/api_integration/apis/management/index_management/inference_endpoints
 /x-pack/test/security_solution_api_integration @elastic/security-solution
 /x-pack/test/api_integration/apis/security_solution @elastic/security-solution
 #CC# /x-pack/plugins/security_solution/ @elastic/security-solution
+/x-pack/test/functional/es_archives/cases/signals/duplicate_ids @elastic/security-solution @elastic/security-threat-hunting
 
 # Security Solution OpenAPI bundles
 /x-pack/plugins/security_solution/docs/openapi/serverless/security_solution_detections_api_* @elastic/security-detection-rule-management
