--- a/oas_docs/output/kibana.staging.yaml
+++ b/oas_docs/output/kibana.staging.yaml
@@ -27753,6 +27753,17 @@ components:
         force:
           description: Force agent policy creation even if packages are not verified.
           type: boolean
+        global_data_tags:
+          items:
+            additionalProperties:
+              oneOf:
+                - type: string
+                - type: number
+            description: >-
+              User defined data tags that are added to all of the inputs. The
+              values can be strings or numbers.
+            type: object
+          type: array
         inactivity_timeout:
           type: integer
         is_protected:
