Push the total request-body-bytes to usage-api

--- a/x-pack/plugins/actions/kibana.jsonc
+++ b/x-pack/plugins/actions/kibana.jsonc
@@ -22,7 +22,8 @@
       "spaces",
       "security",
       "monitoringCollection",
-      "serverless"
+      "serverless",
+      "cloud"
     ],
     "extraPublicDirs": [
       "common"
