[CI] Auto-commit changed files from 'node scripts/lint_ts_projects --fix'

--- a/x-pack/plugins/observability_solution/investigate_app/tsconfig.json
+++ b/x-pack/plugins/observability_solution/investigate_app/tsconfig.json
@@ -61,5 +61,9 @@
     "@kbn/observability-plugin",
     "@kbn/licensing-plugin",
     "@kbn/rule-data-utils",
+    "@kbn/entities-schema",
+    "@kbn/inference-plugin",
+    "@kbn/core-elasticsearch-server",
+    "@kbn/datemath",
   ],
 }
