--- a/oas_docs/output/kibana.staging.yaml
+++ b/oas_docs/output/kibana.staging.yaml
@@ -20458,7 +20458,8 @@ paths:
                           - getOneTimeline
                     required:
                       - data
-                  - type: object
+                  - additionalProperties: false
+                    type: object
           description: Indicates that the (template) Timeline was found and returned.
       summary: Get Timeline or Timeline template details
       tags:
@@ -20603,7 +20604,7 @@ paths:
                 $ref: >-
                   #/components/schemas/Security_Timeline_API_PersistTimelineResponse
           description: Indicates that the timeline has been successfully copied.
-      summary: Copies timeline or timeline template.
+      summary: Copies timeline or timeline template
       tags:
         - Security Timeline API
         - access:securitySolution
@@ -20992,7 +20993,8 @@ paths:
                           #/components/schemas/Security_Timeline_API_ResolvedTimeline
                     required:
                       - data
-                  - type: object
+                  - additionalProperties: false
+                    type: object
           description: The (template) Timeline has been found
         '400':
           description: The request is missing parameters
