Add `@hapi/cookie` to the renovate rule

--- a/renovate.json
+++ b/renovate.json
@@ -136,7 +136,7 @@
     },
     {
       "groupName": "HAPI ecosystem",
-      "matchDepNames": ["@hapi/**", "!@hapi/cookie", "brok"],
+      "matchDepNames": ["@hapi/**", "brok"],
       "reviewers": ["team:kibana-core"],
       "matchBaseBranches": ["main"],
       "labels": ["release_note:skip", "Team:Core", "backport:prev-minor"],
