[CI] Auto-commit changed files from 'node scripts/yarn_deduplicate'

--- a/x-pack/plugins/observability_solution/investigate_app/tsconfig.json
+++ b/x-pack/plugins/observability_solution/investigate_app/tsconfig.json
@@ -61,5 +61,7 @@
     "@kbn/observability-plugin",
     "@kbn/licensing-plugin",
     "@kbn/rule-data-utils",
+    "@kbn/charts-plugin",
+    "@kbn/observability-utils",
   ],
 }
