--- a/x-pack/plugins/observability_solution/apm/tsconfig.json
+++ b/x-pack/plugins/observability_solution/apm/tsconfig.json
@@ -131,6 +131,7 @@
     "@kbn/serverless",
     "@kbn/aiops-log-rate-analysis",
     "@kbn/router-utils",
+    "@kbn/discover-utils",
   ],
   "exclude": ["target/**/*"]
 }
