--- a/x-pack/plugins/observability_solution/observability/tsconfig.json
+++ b/x-pack/plugins/observability_solution/observability/tsconfig.json
@@ -113,7 +113,8 @@
     "@kbn/io-ts-utils",
     "@kbn/core-ui-settings-server-mocks",
     "@kbn/es-types",
-    "@kbn/logging-mocks"
+    "@kbn/logging-mocks",
+    "@kbn/xstate-utils"
   ],
   "exclude": ["target/**/*"]
 }
