--- a/x-pack/plugins/ml/tsconfig.json
+++ b/x-pack/plugins/ml/tsconfig.json
@@ -131,6 +131,7 @@
     "@kbn/json-schemas",
     "@kbn/ml-field-stats-flyout",
     "@kbn/ml-parse-interval",
-    "@kbn/ml-validators"
+    "@kbn/ml-validators",
+    "@kbn/aiops-common"
   ]
 }
