--- a/x-pack/plugins/observability_solution/infra/tsconfig.json
+++ b/x-pack/plugins/observability_solution/infra/tsconfig.json
@@ -109,7 +109,10 @@
     "@kbn/core-analytics-browser",
     "@kbn/observability-alerting-rule-utils",
     "@kbn/core-application-browser",
-    "@kbn/shared-ux-page-no-data-types"
+    "@kbn/shared-ux-page-no-data-types",
+    "@kbn/xstate-utils",
+    "@kbn/management-settings-ids",
+    "@kbn/core-ui-settings-common"
   ],
   "exclude": ["target/**/*"]
 }
