--- a/x-pack/plugins/observability_solution/inventory/tsconfig.json
+++ b/x-pack/plugins/observability_solution/inventory/tsconfig.json
@@ -42,6 +42,8 @@
     "@kbn/shared-svg",
     "@kbn/features-plugin",
     "@kbn/es-query",
-    "@kbn/config-schema"
+    "@kbn/config-schema",
+    "@kbn/elastic-agent-utils",
+    "@kbn/custom-icons"
   ]
 }
