[CI] Auto-commit changed files from 'node scripts/notice'

--- a/x-pack/plugins/observability_solution/apm/tsconfig.json
+++ b/x-pack/plugins/observability_solution/apm/tsconfig.json
@@ -129,6 +129,7 @@
     "@kbn/apm-data-view",
     "@kbn/profiling-data-access-plugin",
     "@kbn/actions-plugin",
+    "@kbn/observability-utils",
   ],
   "exclude": ["target/**/*"]
 }
