--- a/x-pack/packages/observability/observability_utils/tsconfig.json
+++ b/x-pack/packages/observability/observability_utils/tsconfig.json
@@ -21,5 +21,7 @@
     "@kbn/es-types",
     "@kbn/apm-utils",
     "@kbn/es-query",
+    "@kbn/utility-types",
+    "@kbn/safer-lodash-set",
   ]
 }
