--- a/x-pack/packages/kbn-ai-assistant/tsconfig.json
+++ b/x-pack/packages/kbn-ai-assistant/tsconfig.json
@@ -18,15 +18,22 @@
   "kbn_references": [
     "@kbn/core-http-browser",
     "@kbn/i18n",
-    "@kbn/stack-connectors-plugin",
     "@kbn/triggers-actions-ui-plugin",
-    "@kbn/core-http-browser-mocks",
-    "@kbn/cases-plugin",
     "@kbn/actions-plugin",
-    "@kbn/core-notifications-browser",
     "@kbn/i18n-react",
     "@kbn/ui-theme",
-    "@kbn/core-doc-links-browser",
     "@kbn/core",
+    "@kbn/observability-ai-assistant-plugin",
+    "@kbn/observability-ai-assistant-app-plugin",
+    "@kbn/security-plugin",
+    "@kbn/user-profile-components",
+    "@kbn/std",
+    "@kbn/utility-types-jest",
+    "@kbn/kibana-react-plugin",
+    "@kbn/monaco",
+    "@kbn/licensing-plugin",
+    "@kbn/code-editor",
+    "@kbn/ml-plugin",
+    "@kbn/share-plugin",
   ]
 }
