make this empty plugin work, maybe?

--- a/packages/kbn-optimizer/limits.yml
+++ b/packages/kbn-optimizer/limits.yml
@@ -94,6 +94,7 @@ pageLoadAssetSize:
   kibanaReact: 74422
   kibanaUsageCollection: 16463
   kibanaUtils: 79713
+  knowledgeBaseRegistry: 22500
   kubernetesSecurity: 77234
   lens: 57135
   licenseManagement: 41817
