--- a/packages/kbn-search-api-keys-server/kibana.jsonc
+++ b/packages/kbn-search-api-keys-server/kibana.jsonc
@@ -1,5 +1,5 @@
 {
   "type": "shared-server",
-  "id": "@kbn/search-api-keys-api",
+  "id": "@kbn/search-api-keys-server",
   "owner": "@elastic/search-kibana"
 }
