--- a/packages/kbn-search-api-keys-server/package.json
+++ b/packages/kbn-search-api-keys-server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@kbn/search-api-keys-api",
+  "name": "@kbn/search-api-keys-server",
   "private": true,
   "version": "1.0.0",
   "license": "Elastic License 2.0 OR AGPL-3.0-only OR SSPL-1.0"
