--- a/packages/kbn-search-api-keys-server/tsconfig.json
+++ b/packages/kbn-search-api-keys-server/tsconfig.json
@@ -4,7 +4,9 @@
     "outDir": "target/types",
   },
   "include": [
-    "server/**/*"
+    "src/**/*",
+    "types.ts",
+    "index.ts"
   ],
   "kbn_references": [
     "@kbn/core-elasticsearch-server",
