chore(deps): upgrade `rxjs`

--- a/renovate.json
+++ b/renovate.json
@@ -109,6 +109,14 @@
       "enabled": true
     },
     {
+      "groupName": "RxJS",
+      "matchDepNames": ["rxjs"],
+      "reviewers": ["team:kibana-core"],
+      "matchBaseBranches": ["main"],
+      "labels": ["release_note:skip", "Team:Core", "backport:skip"],
+      "enabled": true
+    },
+    {
       "groupName": "@elastic/ebt",
       "matchDepNames": ["@elastic/ebt"],
       "reviewers": ["team:kibana-core"],
