re-add server to app tsconfig

--- a/x-pack/plugins/observability_solution/observability_ai_assistant_app/tsconfig.json
+++ b/x-pack/plugins/observability_solution/observability_ai_assistant_app/tsconfig.json
@@ -10,6 +10,7 @@
     "scripts/**/*",
     "typings/**/*",
     "public/**/*.json",
+    "server/**/*"
   ],
   "kbn_references": [
     "@kbn/es-types",
