[CI] Auto-commit changed files from 'node scripts/yarn_deduplicate'

--- a/x-pack/plugins/observability_solution/observability_ai_assistant_app/tsconfig.json
+++ b/x-pack/plugins/observability_solution/observability_ai_assistant_app/tsconfig.json
@@ -52,6 +52,22 @@
     "@kbn/core-lifecycle-browser",
     "@kbn/inference-plugin",
     "@kbn/ai-assistant",
+    "@kbn/apm-utils",
+    "@kbn/config-schema",
+    "@kbn/es-query",
+    "@kbn/rule-registry-plugin",
+    "@kbn/esql-validation-autocomplete",
+    "@kbn/esql-ast",
+    "@kbn/field-types",
+    "@kbn/security-plugin",
+    "@kbn/observability-plugin",
+    "@kbn/actions-plugin",
+    "@kbn/stack-connectors-plugin",
+    "@kbn/features-plugin",
+    "@kbn/serverless",
+    "@kbn/task-manager-plugin",
+    "@kbn/cloud-plugin",
+    "@kbn/logs-data-access-plugin",
   ],
   "exclude": [
     "target/**/*"
