Remove more uses of presentation context provider

--- a/x-pack/plugins/aiops/kibana.jsonc
+++ b/x-pack/plugins/aiops/kibana.jsonc
@@ -14,24 +14,19 @@
       "licensing",
       "uiActions",
       "embeddable",
-      "presentationUtil",
       "dashboard",
       "fieldFormats",
       "unifiedSearch",
       "share"
     ],
-    "optionalPlugins": [
-      "cases",
-      "observabilityAIAssistant",
-      "usageCollection"
-    ],
+    "optionalPlugins": ["cases", "observabilityAIAssistant", "usageCollection"],
     "requiredBundles": [
       "dataViews",
       "fieldFormats",
       "kibanaReact",
       "kibanaUtils",
       "embeddable",
-      "cases",
+      "cases"
     ]
   }
 }
