--- a/packages/kbn-monaco/package.json
+++ b/packages/kbn-monaco/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "build:antlr4:painless": "antlr -Dlanguage=TypeScript ./src/painless/antlr/painless_lexer.g4 ./src/painless/antlr/painless_parser.g4 && node ./scripts/fix_generated_antlr.js painless",
     "prebuild:antlr4": "brew bundle --file=./scripts/antlr4_tools/brewfile",
-    "build:antlr4": "yarn run build:antlr4:painless && npm run build:antlr4:esql"
+    "build:antlr4": "yarn run build:antlr4:painless && npm run build:antlr4:esql",
+    "build": "node ../../scripts/build_package.js packages/kbn-monaco"
   }
 }
