--- a/packages/kbn-ui-shared-deps-src/BUILD.bazel
+++ b/packages/kbn-ui-shared-deps-src/BUILD.bazel
@@ -4,7 +4,8 @@ SRCS = glob([
   "index.js",
   "webpack.config.js",
   "src/**/*",
-])
+  ]
+)
 
 webpack_cli(
   name = "shared_built_assets",
@@ -58,5 +59,5 @@ webpack_cli(
       "NODE_OPTIONS": "--openssl-legacy-provider",
     },
   }),
-  visibility = ["//visibility:public"],
+  visibility = ["//visibility:public"]
 )
