--- a/packages/kbn-ui-shared-deps-src/package.json
+++ b/packages/kbn-ui-shared-deps-src/package.json
@@ -2,5 +2,8 @@
   "name": "@kbn/ui-shared-deps-src",
   "version": "1.0.0",
   "private": true,
-  "license": "Elastic License 2.0 OR AGPL-3.0-only OR SSPL-1.0"
+  "license": "Elastic License 2.0 OR AGPL-3.0-only OR SSPL-1.0",
+  "scripts": {
+    "build": "node ../../scripts/build_package.js packages/kbn-ui-shared-deps-src"
+  }
 }
