--- a/x-pack/plugins/aiops/kibana.jsonc
+++ b/x-pack/plugins/aiops/kibana.jsonc
@@ -14,6 +14,7 @@
       "licensing",
       "uiActions",
       "embeddable",
+      "presentationUtil",
       "dashboard",
       "fieldFormats",
       "unifiedSearch",
