[CI] Auto-commit changed files from 'node scripts/yarn_deduplicate'

--- a/x-pack/plugins/observability_solution/investigate_app/tsconfig.json
+++ b/x-pack/plugins/observability_solution/investigate_app/tsconfig.json
@@ -64,6 +64,7 @@
     "@kbn/entities-schema",
     "@kbn/inference-plugin",
     "@kbn/core-elasticsearch-server",
-    "@kbn/datemath",
+    "@kbn/calculate-auto",
+    "@kbn/ml-random-sampler-utils",
   ],
 }
