--- a/oas_docs/output/kibana.serverless.staging.yaml
+++ b/oas_docs/output/kibana.serverless.staging.yaml
@@ -14807,6 +14807,10 @@ paths:
           schema:
             $ref: '#/components/schemas/Security_Timeline_API_DocumentIds'
         - in: query
+          name: savedObjectIds
+          schema:
+            $ref: '#/components/schemas/Security_Timeline_API_SavedObjectIds'
+        - in: query
           name: page
           schema:
             nullable: true
@@ -31543,6 +31547,12 @@ components:
         - threat_match
         - zeek
       type: string
+    Security_Timeline_API_SavedObjectIds:
+      oneOf:
+        - items:
+            type: string
+          type: array
+        - type: string
     Security_Timeline_API_SavedObjectResolveAliasPurpose:
       enum:
         - savedObjectConversion
