--- a/x-pack/plugins/observability_solution/inventory/tsconfig.json
+++ b/x-pack/plugins/observability_solution/inventory/tsconfig.json
@@ -44,6 +44,7 @@
     "@kbn/es-query",
     "@kbn/config-schema",
     "@kbn/elastic-agent-utils",
-    "@kbn/custom-icons"
+    "@kbn/custom-icons",
+    "@kbn/ui-theme"
   ]
 }
