--- a/x-pack/plugins/search_assistant/tsconfig.json
+++ b/x-pack/plugins/search_assistant/tsconfig.json
@@ -21,8 +21,8 @@
     "@kbn/observability-ai-assistant-plugin",
     "@kbn/config-schema",
     "@kbn/ai-assistant",
-    "@kbn/typed-react-router-config",
-    "@kbn/i18n"
+    "@kbn/i18n",
+    "@kbn/shared-ux-router"
   ],
   "exclude": [
     "target/**/*",
