--- a/renovate.json
+++ b/renovate.json
@@ -125,6 +125,14 @@
       "enabled": true
     },
     {
+      "groupName": "lodash",
+      "matchDepNames": ["lodash", "@types/lodash"],
+      "reviewers": ["team:kibana-core"],
+      "matchBaseBranches": ["main"],
+      "labels": ["release_note:skip", "Team:Core", "backport:skip"],
+      "enabled": true
+    },
+    {
       "groupName": "ansi-regex",
       "matchDepNames": ["ansi-regex"],
       "reviewers": ["team:kibana-core"],
