--- a/renovate.json
+++ b/renovate.json
@@ -144,7 +144,7 @@
     },
     {
       "groupName": "HAPI ecosystem",
-      "matchDepNames": ["@hapi/**", "brok"],
+      "matchDepNames": ["@hapi/**", "brok", "joi"],
       "reviewers": ["team:kibana-core"],
       "matchBaseBranches": ["main"],
       "labels": ["release_note:skip", "Team:Core", "backport:prev-minor"],
