Add sys_monitoring query param to oas

--- a/x-pack/plugins/fleet/common/openapi/bundled.yaml
+++ b/x-pack/plugins/fleet/common/openapi/bundled.yaml
@@ -2136,6 +2136,11 @@ paths:
       security: []
       parameters:
         - $ref: '#/components/parameters/kbn_xsrf'
+        - schema:
+            type: boolean
+          in: query
+          name: sys_monitoring
+          description: Enable collection of system logs and metrics.
   /api/fleet/agent_policies/{agentPolicyId}:
     parameters:
       - schema:
