Remove anonymous combinatorial types from cases api spec

--- a/x-pack/plugins/cases/docs/openapi/components/parameters/owner_filter.yaml
+++ b/x-pack/plugins/cases/docs/openapi/components/parameters/owner_filter.yaml
@@ -6,8 +6,6 @@ description: >
   that the user has access to read.
 schema:
   oneOf:
+    - $ref: '../schemas/owner.yaml'
     - $ref: '../schemas/owners.yaml'
-    - type: array
-      items:
-        $ref: '../schemas/owners.yaml'
 example: cases
