[CI] Auto-commit changed files from 'make api-docs && make api-docs-staging'

--- a/oas_docs/output/kibana.yaml
+++ b/oas_docs/output/kibana.yaml
@@ -6688,7 +6688,7 @@ paths:
         - $ref: '#/components/parameters/Cases_category'
         - $ref: '#/components/parameters/Cases_defaultSearchOperator'
         - $ref: '#/components/parameters/Cases_from'
-        - $ref: '#/components/parameters/Cases_owner'
+        - $ref: '#/components/parameters/Cases_owner_filter'
         - $ref: '#/components/parameters/Cases_page_index'
         - $ref: '#/components/parameters/Cases_page_size'
         - $ref: '#/components/parameters/Cases_reporters'
@@ -7136,7 +7136,7 @@ paths:
       operationId: getCasesByAlertDefaultSpace
       parameters:
         - $ref: '#/components/parameters/Cases_alert_id'
-        - $ref: '#/components/parameters/Cases_owner'
+        - $ref: '#/components/parameters/Cases_owner_filter'
       responses:
         '200':
           content:
@@ -7177,7 +7177,7 @@ paths:
         where the cases were created.
       operationId: getCaseConfigurationDefaultSpace
       parameters:
-        - $ref: '#/components/parameters/Cases_owner'
+        - $ref: '#/components/parameters/Cases_owner_filter'
       responses:
         '200':
           content:
@@ -7308,7 +7308,7 @@ paths:
                             type: string
                       type: array
                     owner:
-                      $ref: '#/components/schemas/Cases_owners'
+                      $ref: '#/components/schemas/Cases_owner'
                     templates:
                       $ref: '#/components/schemas/Cases_templates'
                     updated_at:
@@ -7356,7 +7356,7 @@ paths:
     post:
       description: >
         Case settings include external connection details, custom fields, and
-        templates.  Connectors are used to interface with external systems. You
+        templates. Connectors are used to interface with external systems. You
         must create a connector before you can use it in your cases. If you set
         a default connector, it is automatically selected when you create cases
         in Kibana. If you use the create case API, however, you must still
@@ -7504,7 +7504,7 @@ paths:
                           type: string
                     type: array
                   owner:
-                    $ref: '#/components/schemas/Cases_owners'
+                    $ref: '#/components/schemas/Cases_owner'
                   templates:
                     $ref: '#/components/schemas/Cases_templates'
                   updated_at:
@@ -7700,7 +7700,7 @@ paths:
                           type: string
                     type: array
                   owner:
-                    $ref: '#/components/schemas/Cases_owners'
+                    $ref: '#/components/schemas/Cases_owner'
                   templates:
                     $ref: '#/components/schemas/Cases_templates'
                   updated_at:
@@ -7809,7 +7809,7 @@ paths:
         returned by this API is unchanged.
       operationId: getCaseReportersDefaultSpace
       parameters:
-        - $ref: '#/components/parameters/Cases_owner'
+        - $ref: '#/components/parameters/Cases_owner_filter'
       responses:
         '200':
           content:
@@ -7864,7 +7864,7 @@ paths:
         privileges, depending on the owner of the cases you're seeking.
       operationId: getCaseStatusDefaultSpace
       parameters:
-        - $ref: '#/components/parameters/Cases_owner'
+        - $ref: '#/components/parameters/Cases_owner_filter'
       responses:
         '200':
           content:
@@ -7897,7 +7897,7 @@ paths:
         privileges, depending on the owner of the cases you're seeking.
       operationId: getCaseTagsDefaultSpace
       parameters:
-        - $ref: '#/components/parameters/Cases_owner'
+        - $ref: '#/components/parameters/Cases_owner_filter'
       responses:
         '200':
           content:
@@ -16424,11 +16424,8 @@ components:
       name: assignees
       schema:
         oneOf:
-          - type: string
-          - items:
-              type: string
-            maxItems: 100
-            type: array
+          - $ref: '#/components/schemas/Cases_string'
+          - $ref: '#/components/schemas/Cases_string_array'
     Cases_case_id:
       description: >-
         The identifier for the case. To retrieve case IDs, use the find cases
@@ -16445,12 +16442,8 @@ components:
       name: category
       schema:
         oneOf:
-          - example: my-category
-            type: string
-          - items:
-              type: string
-            maxItems: 100
-            type: array
+          - $ref: '#/components/schemas/Cases_case_category'
+          - $ref: '#/components/schemas/Cases_case_categories'
     Cases_comment_id:
       description: >
         The identifier for the comment. To retrieve comment IDs, use the get
@@ -16527,7 +16520,7 @@ components:
       required: true
       schema:
         type: string
-    Cases_owner:
+    Cases_owner_filter:
       description: >
         A filter to limit the response to a specific set of applications. If
         this parameter is omitted, the response contains information about all
@@ -16537,10 +16530,8 @@ components:
       name: owner
       schema:
         oneOf:
+          - $ref: '#/components/schemas/Cases_owner'
           - $ref: '#/components/schemas/Cases_owners'
-          - items:
-              $ref: '#/components/schemas/Cases_owners'
-            type: array
     Cases_page_index:
       description: The page number to return.
       in: query
@@ -16565,11 +16556,8 @@ components:
       name: reporters
       schema:
         oneOf:
-          - type: string
-          - items:
-              type: string
-            maxItems: 100
-            type: array
+          - $ref: '#/components/schemas/Cases_string'
+          - $ref: '#/components/schemas/Cases_string_array'
     Cases_search:
       description: >-
         An Elasticsearch simple_query_string query that filters the objects in
@@ -16585,9 +16573,7 @@ components:
       schema:
         oneOf:
           - $ref: '#/components/schemas/Cases_searchFieldsType'
-          - items:
-              $ref: '#/components/schemas/Cases_searchFieldsType'
-            type: array
+          - $ref: '#/components/schemas/Cases_searchFieldsTypeArray'
     Cases_severity:
       description: The severity of the case.
       in: query
@@ -16644,11 +16630,8 @@ components:
       name: tags
       schema:
         oneOf:
-          - type: string
-          - items:
-              type: string
-            maxItems: 100
-            type: array
+          - $ref: '#/components/schemas/Cases_string'
+          - $ref: '#/components/schemas/Cases_string_array'
     Cases_to:
       description: >
         Returns only cases that were created before a specific date. The date
@@ -17049,7 +17032,7 @@ components:
         index:
           $ref: '#/components/schemas/Cases_alert_indices'
         owner:
-          $ref: '#/components/schemas/Cases_owners'
+          $ref: '#/components/schemas/Cases_owner'
         rule:
           $ref: '#/components/schemas/Cases_rule'
         type:
@@ -17087,7 +17070,7 @@ components:
           maxLength: 30000
           type: string
         owner:
-          $ref: '#/components/schemas/Cases_owners'
+          $ref: '#/components/schemas/Cases_owner'
         type:
           description: The type of comment.
           enum:
@@ -17144,7 +17127,7 @@ components:
             type: string
           type: array
         owner:
-          $ref: '#/components/schemas/Cases_owners'
+          $ref: '#/components/schemas/Cases_owner'
         pushed_at:
           example: null
           format: date-time
@@ -17286,6 +17269,11 @@ components:
           - uid
       maxItems: 10
       nullable: true
+      type: array
+    Cases_case_categories:
+      items:
+        $ref: '#/components/schemas/Cases_case_category'
+      maxItems: 100
       type: array
     Cases_case_category:
       description: A word or phrase that categorizes the case.
@@ -17448,7 +17436,7 @@ components:
           example: 66b9aa00-94fa-11ea-9f74-e7e108796192
           type: string
         owner:
-          $ref: '#/components/schemas/Cases_owners'
+          $ref: '#/components/schemas/Cases_owner'
         settings:
           $ref: '#/components/schemas/Cases_settings'
         severity:
@@ -17980,7 +17968,7 @@ components:
         description:
           $ref: '#/components/schemas/Cases_case_description'
         owner:
-          $ref: '#/components/schemas/Cases_owners'
+          $ref: '#/components/schemas/Cases_owner'
         settings:
           $ref: '#/components/schemas/Cases_settings'
         severity:
@@ -18034,7 +18022,7 @@ components:
               example: elastic
               nullable: true
               type: string
-    Cases_owners:
+    Cases_owner:
       description: >
         The application that owns the cases: Stack Management, Observability, or
         Elastic Security.
@@ -18044,6 +18032,10 @@ components:
         - securitySolution
       example: cases
       type: string
+    Cases_owners:
+      items:
+        $ref: '#/components/schemas/Cases_owner'
+      type: array
     Cases_payload_alert_comment:
       type: object
       properties:
@@ -18065,7 +18057,7 @@ components:
                     type: string
                   type: array
             owner:
-              $ref: '#/components/schemas/Cases_owners'
+              $ref: '#/components/schemas/Cases_owner'
             rule:
               type: object
               properties:
@@ -18295,7 +18287,7 @@ components:
         description:
           type: string
         owner:
-          $ref: '#/components/schemas/Cases_owners'
+          $ref: '#/components/schemas/Cases_owner'
         settings:
           $ref: '#/components/schemas/Cases_settings'
         severity:
@@ -18364,7 +18356,7 @@ components:
             comment:
               type: string
             owner:
-              $ref: '#/components/schemas/Cases_owners'
+              $ref: '#/components/schemas/Cases_owner'
             type:
               enum:
                 - user
@@ -18394,6 +18386,10 @@ components:
         - description
         - title
       type: string
+    Cases_searchFieldsTypeArray:
+      items:
+        $ref: '#/components/schemas/Cases_searchFieldsType'
+      type: array
     Cases_set_case_configuration_request:
       description: >-
         External connection details, such as the closure type and default
@@ -18480,7 +18476,7 @@ components:
           minItems: 0
           type: array
         owner:
-          $ref: '#/components/schemas/Cases_owners'
+          $ref: '#/components/schemas/Cases_owner'
         templates:
           $ref: '#/components/schemas/Cases_templates'
       required:
@@ -18499,6 +18495,13 @@ components:
           type: boolean
       required:
         - syncAlerts
+    Cases_string:
+      type: string
+    Cases_string_array:
+      items:
+        $ref: '#/components/schemas/Cases_string'
+      maxItems: 100
+      type: array
     Cases_template_tags:
       description: >
         The words and phrases that help categorize templates. It can be an empty
@@ -18611,7 +18614,7 @@ components:
         index:
           $ref: '#/components/schemas/Cases_alert_indices'
         owner:
-          $ref: '#/components/schemas/Cases_owners'
+          $ref: '#/components/schemas/Cases_owner'
         rule:
           $ref: '#/components/schemas/Cases_rule'
         type:
@@ -18855,7 +18858,7 @@ components:
           example: 8af6ac20-74f6-11ea-b83a-553aecdb28b6
           type: string
         owner:
-          $ref: '#/components/schemas/Cases_owners'
+          $ref: '#/components/schemas/Cases_owner'
         type:
           description: The type of comment.
           enum:
@@ -18915,7 +18918,7 @@ components:
           example: 22fd3e30-03b1-11ed-920c-974bfa104448
           type: string
         owner:
-          $ref: '#/components/schemas/Cases_owners'
+          $ref: '#/components/schemas/Cases_owner'
         payload:
           oneOf:
             - $ref: '#/components/schemas/Cases_payload_alert_comment'
@@ -19002,7 +19005,7 @@ components:
             - full_name
             - username
         owner:
-          $ref: '#/components/schemas/Cases_owners'
+          $ref: '#/components/schemas/Cases_owner'
         payload:
           oneOf:
             - $ref: '#/components/schemas/Cases_payload_alert_comment'
@@ -19047,7 +19050,7 @@ components:
           example: 8af6ac20-74f6-11ea-b83a-553aecdb28b6
           type: string
         owner:
-          $ref: '#/components/schemas/Cases_owners'
+          $ref: '#/components/schemas/Cases_owner'
         pushed_at:
           example: null
           format: date-time
